fix screen size and visibility of error message

--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ li {
 
 @media (width >=750px) {
     body {
-        background: linear-gradient(hsl(218, 28%, 13%) 84%, hsl(216, 53%, 9%) 44%) no-repeat;
+        background: linear-gradient(hsl(218, 28%, 13%) 80%, hsl(216, 53%, 9%) 20%) no-repeat;
         color: white;
         font-size: 14px;
         font-weight: 400px;
@@ -496,10 +496,12 @@ li {
         background-color: hsl(176, 68%, 64%);
 
     }
+
     .error_message{
         display: flex;
         margin-left: 5em;
         margin-top: 1em;
+        visibility: hidden;
     }
 
 
